fix: camera not showing

--- a/src/pages/Aovivo-page/Aovivo.module.css
+++ b/src/pages/Aovivo-page/Aovivo.module.css
@@ -2,6 +2,9 @@
   background-color: #222629;
   padding: 20px;
   height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .Aovivo {
@@ -19,10 +22,8 @@
   font-size: 50px;
 }
 
-.Camera {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60vh;
-  padding: 10px;
-}
+/* .cameraContainer {
+} */
+
+/* .Camera {
+} */
